@@ -76,7 +76,6 @@
     }
 
     a {
-      box-sizing: border-box;
       white-space: nowrap;
       position: relative;
       text-decoration: none;
@@ -223,7 +222,6 @@
       // Media for Windows High Contrast
       @media (forced-colors: $media-forced-colours) {
         background: transparent;
-        box-sizing: border-box;
         border: 1px solid ActiveText;
       }
     }
