@@ -50,7 +50,6 @@ $switch-border-radius: math.div(($switch-height + $switch-border * 2), 2);
     }
 
     &::after {
-      box-sizing: border-box;
       position: absolute;
       top: 50%;
       transform: translate($switch-border, -50%);
