@@ -94,7 +94,6 @@
       text-decoration: none;
       position: relative;
       overflow: hidden;
-      box-sizing: border-box;
       -webkit-font-smoothing: auto;
       // stylelint-disable-next-line property-no-vendor-prefix
       -moz-appearance: none;
