@@ -7,7 +7,6 @@
   transition: top 0.5s ease 0s, inset-inline-end 0.5s ease 0s,
     height 0.5s ease 0s;
   pointer-events: auto;
-  box-sizing: border-box;
   padding-bottom: 0;
   inset-inline-end: -2000px;
   background-color: theme('colors.white.DEFAULT');
