@@ -50,7 +50,6 @@
       background-color: unset;
       border: unset;
       padding: 0;
-      box-sizing: border-box;
 
       svg {
         position: absolute;
