@@ -14,7 +14,6 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    box-sizing: border-box;
     white-space: nowrap;
     border-inline-start: 3px solid transparent;
     border-inline-end: 3px solid transparent;
