@@ -137,7 +137,6 @@ $positions: (
   visibility: hidden;
   font-family: $font-sans;
   font-size: 14px;
-  box-sizing: border-box;
   padding-inline-start: 0;
   text-decoration: none;
 
